--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="API key"
+        android:hint="Cert password"
         android:importantForAutofill="no"
         android:inputType="text" />
 
@@ -18,6 +18,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Certificate"
+        android:importantForAutofill="no"
+        android:inputType="text" />
+
+    <EditText
+        android:id="@+id/key"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Private key"
         android:importantForAutofill="no"
         android:inputType="text" />
 
@@ -34,10 +42,33 @@
         android:layout_height="wrap_content">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/filldata"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign" />
+            android:text="Fill test data" />
+
+        <Button
+            android:id="@+id/getkey"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Get private key" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/signpfx"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign using PFX" />
+
+        <Button
+            android:id="@+id/signkey"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign using key" />
 
         <TextView
             android:id="@+id/timer"
